src/app/components/table/table.component.scss
.light {
    background: white;
}

.dark {

    background: rgb(202, 202, 202);
}





.tableArea {
    display: flex;
    width: 95%;
    margin: 2em auto;
    border-radius: 0.5em;
    flex-direction: column;
    background-color: white;
    -webkit-box-shadow: 3px 4px 9px 0px rgba(50, 50, 50, 0.61);
    -moz-box-shadow:    3px 4px 9px 0px rgba(50, 50, 50, 0.61);
    box-shadow:         3px 4px 9px 0px rgba(50, 50, 50, 0.61);
    .table {
        table-layout: fixed;
        tr th {
            font-size: 1em;
            border-bottom: 1px solid rgb(128, 128, 128);
            text-align: left;
            padding: 1em;
            color: white;
            background: rgb(44, 44, 44);
            font-weight: 400;
        }
        tr th:hover {
            cursor: grab;
        }

        tr th:first-of-type {
            border-top-left-radius: 0.5em;
        }
        tr th:last-of-type {
            border-top-right-radius: 0.5em;
        }
    

        .row {
            height: 3em;
            font-size: 0.8em;
            color: rgb(53, 53, 53);
            td {
                border-bottom: 1px solid rgb(189, 189, 189);
                width: 25%;
                height: 3em;
                padding: 1em;
            }
        }
        tr:last-child td {
            border: none;
        }
    }
}

.paginate {
    display: flex;
    justify-content: space-between;
    button {
        padding: 0em 1em;
        border: none;
        background: none;
        transition: 0.2s ease-in;
    }

    button:hover {
        -webkit-box-shadow: -3px 4px 9px 0px rgba(50, 50, 50, 0.61);
        -moz-box-shadow:    -3px 4px 9px 0px rgba(50, 50, 50, 0.61);
        box-shadow:         -3px 4px 9px 0px rgba(50, 50, 50, 0.61);
    }
}


@media (min-width: 600px) {
    .tableArea {
        max-width: 600px;


        .table {
            .row {
                font-size: 1em;
                td {
                    height: 2em;
                }
            }
        }
    }
}

